--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
 	<!-- <meta http-equiv="X-UA-Compatible" content="IE=7,8,9"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1">
 	<title>Luis Santiago | Portafolio</title>
-	<meta name="description" content="Desarrollador de aplicaciones moviles, videojuegos, realidad aumentada, realidad virtual, recorridos virtuales y aplicaciones web.">
-	<meta name="keywords" content="Portfolio, Programador, Videojuegos, Realidad, Aumentada, Virtual, Aplicaciones, Web, Unity">
+	<!-- <meta name="description" content=
+	"Desarrollador de aplicaciones moviles, videojuegos, realidad aumentada, realidad virtual, recorridos virtuales y aplicaciones web."
+	> -->
+	<meta name="keywords" content="Portfolio, Programador, Videojuegos, Realidad, Aumentada, Aplicaciones, Web, Unity, Luis Santiago">
 	<!-- <link rel="stylesheet" href="index4.css"> -->
 	<!-- <link href='http://fonts.googleapis.com/css?family=Electrolize' rel='stylesheet' type='text/css' />	 -->
 	<link rel="stylesheet" type="text/css" href="css/normalize.css">
@@ -20,7 +22,7 @@
 	
 	<div class="slideBackground">						
 		<img class="background" src="img/code.jpg">
-		<img class="background" src="img/developer.jpg" alt="">
+		<!-- <img class="background" src="img/developer.jp" alt=""> -->
 		<img class="background" src="img/laptop.jpg">		
 	</div>	
 	<div class="effect"></div>
@@ -29,7 +31,7 @@
 			<div class="logo">				
 			<img src="img/avatar2.png" class="avatar">
 			<h1>
-				<span>Portafolio</span>	
+				<span>Portfolio</span>	
 				Luis Santiago
 			</h1>	
 			<div  class="icon_menu" id="nav"></div>				
@@ -132,7 +134,7 @@
 		</div>
 	</div>
 	<div id="portfolio">
-		<img class="background portfolio-background" src="img/video-controller.jpg" alt="" style=" height: 100%; ">
+		<img class="background_main portfolio-background" src="img/xbox-controller.jpg" alt="" style=" height: 100%; ">
 		<div class="portfolio">
 			<div class="portfolio-content">			
 				<div class="nav">
@@ -158,6 +160,7 @@
 							<div class="thumb_section">Videojuegos</div>						
 						</div>
 					</div>
+
 					<div class="columns-four" data-section="Videogame" data-app="Delusion">
 						<div class="thumb-column-background">
 							<img class="thumb-column" src="img/projects/Delusion.png">
@@ -186,18 +189,24 @@
 							<div class="thumb_section">Realidad Aumentada</div>							
 						</div>
 					</div>
-					<!-- <div class="columns-four" data-section="Web" data-app="Portfolio">
+					<div class="columns-four" data-section="Augmented" data-app="EjercicioRA">
 						<div class="thumb-column-background">
-							<img class="thumb-column" src="img/projects/Portfolio.png">
+							<img class="thumb-column" src="img/projects/EjercicioRA.png">
 						</div>
 						<div class="column-description">
-							<div class="thumb_title">Portafolio</div>
-							<div class="thumb_section">WEB</div>							
+							<div class="thumb_title">Realidad Aumentada</div>
+							<div class="thumb_section">Realidad Aumentada</div>							
 						</div>
-					</div> -->
-					
-
-
+					</div>
+					<div class="columns-four" data-section="Augmented" data-app="EjercicioRA">
+						<div class="thumb-column-background">
+							<img class="thumb-column" src="img/projects/EjercicioRA.png">
+						</div>
+						<div class="column-description">
+							<div class="thumb_title">Realidad Aumentada</div>
+							<div class="thumb_section">Realidad Aumentada</div>							
+						</div>
+					</div>
 				</div>
 			</div>			
 		</div>
