--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 <body oncontextmenu='return false' ondragstart='return false' onselectstart='return false'>
 	<!-- onmousedown='return false'	 -->
 	
-	<div class="slideBackground">						
+	<div class="slideBackground">			
+		<!-- <img class="background" src="img/one-controller.jpg" alt="">			 -->
 		<img class="background" src="img/code.jpg">
-		<!-- <img class="background" src="img/developer.jp" alt=""> -->
 		<img class="background" src="img/laptop.jpg">		
 	</div>	
 	<div class="effect"></div>
@@ -134,7 +134,9 @@
 		</div>
 	</div>
 	<div id="portfolio">
-		<img class="background_main portfolio-background" src="img/xbox-controller.jpg" alt="" style=" height: 100%; ">
+		<!-- <img class="background_main portfolio-background" src="img/xbox-controller.jpg" alt="" style=" height: 100%; "> -->
+		<img class="background_main portfolio-background" src="img/one-controller.jpg" alt="" style=" height: 100%; ">
+
 		<div class="portfolio">
 			<div class="portfolio-content">			
 				<div class="nav">
@@ -230,20 +232,21 @@
 				</div>
 				<div class="app-content">
 					<div class="img-group" data-app="Galaxy3D">
+						<iframe class="img-center" width="640" height="360" src="https://www.youtube.com/embed/4Vw4pOTO9CY" frameborder="0" allowfullscreen></iframe>						
 						<img  class="img-center" src="img/projects/Galaxy3D/Galaxy3D_gameplay4.jpg">
 						<img  class="img-center" src="img/projects/Galaxy3D/Galaxy3D_gameplay6.jpg">				
 						<img  class="img-center" src="img/projects/Galaxy3D/Galaxy3D_gameplay1.jpg">				
 						<img  class="img-center" src="img/projects/Galaxy3D/Galaxy3D_gameplay2.jpg">
 
-						<iframe class="img-center" width="640" height="360" src="https://www.youtube.com/embed/4Vw4pOTO9CY" frameborder="0" allowfullscreen></iframe>						
 					</div>					
 			
 					<div class="img-group" data-app="Delusion">
+						<iframe class="img-center" width="640" height="360" src="https://www.youtube.com/embed/FYZpAaqduBc" frameborder="0" allowfullscreen></iframe>	
 						<img  class="img-center" src="img/projects/Delusion/Delusion_1.png">
 						<img  class="img-center" src="img/projects/Delusion/Delusion_2.png">
 						<img  class="img-center" src="img/projects/Delusion/Delusion_3.png">	
 						<img  class="img-center" src="img/projects/Delusion/Delusion_4.png">
-						<iframe class="img-center" width="640" height="360" src="https://www.youtube.com/embed/FYZpAaqduBc" frameborder="0" allowfullscreen></iframe>												
+																	
 					</div>					
 			
 					<div class="img-group" data-app="AdminFactu">
