--- a/index.html
+++ b/index.html
@@ -135,20 +135,22 @@
 	</div>
 	<div id="portfolio">
 		<!-- <img class="background_main portfolio-background" src="img/xbox-controller.jpg" alt="" style=" height: 100%; "> -->
-		<img class="background_main portfolio-background" src="img/one-controller.jpg" alt="" style=" height: 100%; ">
+		<img class="portfolio-background" src="img/one-controller.jpg" alt="" >
 
 		<div class="portfolio">
+			<!-- <img class="background_main portfolio-background" src="img/one-controller.jpg" alt="" style=" height: 100%; "> -->
+
 			<div class="portfolio-content">			
 				<div class="nav">
 					<span>
 						<h2>Proyectos</h2>
 					</span>									
 					<ul>
-						<li><a href="#" data-section="All">Todos</a></li>
-						<li><a href="#" data-section="Videogame">Videojuegos</a></li>
-						<li><a href="#" data-section="Augmented">Realidad Aumentada</a></li>
+						<li><a data-section="All">Todos</a></li>
+						<li><a data-section="Videogame">Videojuegos</a></li>
+						<li><a data-section="Augmented">Realidad Aumentada</a></li>
 						<!-- <li><a href="#" data-section="Virtual">Realidad Virtual</a></li> -->
-						<li><a href="#" data-section="Web">WEB</a></li>
+						<li><a data-section="Web">WEB</a></li>
 					</ul>
 				</div>
 				<div class="separator"></div>
@@ -392,6 +394,6 @@
 	<script type="text/javascript" src="js/jquery/jquery.easing.1.3.js"></script>
 	<script type="text/javascript" src="js/jquery/jquery.mCustomScrollbar.concat.min.js"></script>
 	<script type="text/javascript" src="js/tooltip.js"></script>
-	<script type="text/javascript" src="js/index4.js"></script>
+	<script type="text/javascript" src="js/custom.js"></script>
 </body>
 </html>
