--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<!-- <link rel="stylesheet" type="text/css" href="css/normalize.css"> -->
 	<!-- <link rel="stylesheet" type="text/css" href="css/fonts.css"> -->
 	<!-- <link rel="stylesheet" type="text/css" href="css/inicio.css"> -->
+	<link rel="icon" href="img/favicon.ico">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/devicon.css">
 	<link rel="stylesheet" type="text/css" href="css/wordmarks.css">	
@@ -19,10 +20,8 @@
 	<link rel="stylesheet" type="text/css" href="css/devicons.css">
 	<link rel="stylesheet" type="text/css" href="js/jquery/jquery.mCustomScrollbar.css">
 </head>
-<!-- <body oncontextmenu='return false' ondragstart='return false' onselectstart='return false'> -->
+<body oncontextmenu='return false' ondragstart='return false' onselectstart='return false'>
 	<!-- onmousedown='return false'	 -->
-<body>
-	
 	<div class="slideBackground">			
 		<img class="background" src="img/code.jpg">
 		<img class="background" src="img/laptop.jpg">		
