--- a/index.html
+++ b/index.html
@@ -576,14 +576,14 @@
 		
 	<div class="footer">
 		<ul class="social">
-		    <li><a class="linkedin" data-title="Linkedin" target="new" href="#"></a></li>
+		    <li><a class="linkedin" data-title="Linkedin" href="#"></a></li>
 		    <li><a class="twitter" data-title="Twitter" target="new" href="https://twitter.com/ljsantigo"></a></li>
 		    <li><a class="youtube" data-title="Youtube" target="new" href="https://www.youtube.com/channel/UCvFA9o1BI5i08qvZoJkBgUw" rel="publisher"></a></li>
 		   
 		    <li><a class="rss" data-title="RSS"></a></li>
 		</ul> 
 		<div class="rights">
-			<p>Copyright © 2016</p>
+			<p>Copyright © 2018</p>
 			<p>Luis Santiago</p>
 		</div>
 	</div>
