--- a/index.html
+++ b/index.html
@@ -132,10 +132,10 @@
 					<ul>
 						<li> Programación C++, C++11/14, STL, Ogre3d, Bullet Physics,<br/> OIS, CEGUI, SDL.</li>
 						<li> Entorno de desarrollo Linux compilacion con make.</li>
-						<li> Programación C#, Unity, Visual Studio.</li>
+						<li> Programación C#, Unity, dlls, corutinas, scriptable objects.</li>
+						<li> Conocimientos básicos de programación Shaders.</li>
 						<li> Programación de Gameplay, UI, IA basica.</li>
 						<li> Patrones de diseño, estructuras de datos</li>
-						<!-- <li>Programación basica de shaders en Unity.</li> -->
 						<!-- <li>Conocimientos basicos de realidad aumentada con Vuforia y Unity.</li> -->
 
 						<!-- <li>Iluminación y lightmapping para disminuir el uso de recursos.</li>
