--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 						<li> Programación C#, Unity, delegados, corutinas, 
 							scriptable objects, serialización, herramientas UnityEditor.</li>
 						<li> Programación C++, C++11/14, STL, Ogre3d, Bullet Physics,
-							<br/> OIS, CEGUI, SDL.</li>
+							OIS, CEGUI, SDL.</li>
 						<li> Programación de IA, FSMs, BTs, pathfinding </li>
 						<!-- <li> Entorno de desarrollo Linux compilacion con make.</li> -->
 						<li> Programación Shaders con CG.</li>
